--- a/src/components/pages/audiocall/index.css
+++ b/src/components/pages/audiocall/index.css
@@ -58,6 +58,14 @@
   background: rgba(42, 57, 80, 0.5);
 }
 
+.right-answer-picture {
+  display: block;
+  margin: 0 auto;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+}
+
 .audiocall-answers {
   display: flex;
   flex-direction: row;
