--- a/src/components/pages/statistic/index.css
+++ b/src/components/pages/statistic/index.css
@@ -6,6 +6,10 @@
   background-size: cover;
 }
 
+.statistic-wrapper-auth {
+  background-color: #3b4d68;
+}
+
 .statistic-wrapper h1 {
   color: #ffc86d;
 }
@@ -22,9 +26,8 @@
 
 .statistic-table {
   width: 80%;
-  background-color: #00e0c752;
-  color: white;
   margin: 0 auto;
+  font-size: 1.2rem;
 }
 .statistic-table__header {
   display: flex;
@@ -53,26 +56,47 @@
 .statistic__header-all.active {
   border-bottom: 4px solid white;
 } */
-.statistic-table__body {
-  margin: 0 20px;
-  padding-bottom: 40px;
-}
+
 .statistic-table__body h3 {
   font-family: "Forum";
   letter-spacing: 1.5px;
-  font-size: 40px;
-  font-weight: normal;
-  margin: 20px;
-  padding-top: 40px;
+  font-size: 2.5rem;
+  font-weight: bold;
+  color: #ffc86d;
+  padding-bottom: 8px;
 }
+
+.statistic-games__wrapper {
+}
+
+.statistic-games__wrapper h3 {
+  text-align: center;
+}
+
+.statistic__title {
+  padding-top: 15px;
+}
+
 .statistic-all,
 .statistic-sprint,
 .statistic-audiocall {
+  background-color: white;
   width: 40%;
+  border: 3px dashed #ffc86d;
   box-shadow: 0px 3px 3px -2px rgb(0 0 0 / 20%),
     0px 3px 4px 0px rgb(0 0 0 / 14%), 0px 1px 8px 0px rgb(0 0 0 / 12%);
   padding: 20px;
   font-family: "Forum";
+}
+
+.statistic-all {
+  margin: 0 auto;
+}
+
+.count {
+  font-size: 22px;
+  font-weight: bold;
+  color: var(--font-color-dark);
 }
 
 .statistic-all div,
@@ -83,15 +107,31 @@
 }
 .statistic-sprint h4,
 .statistic-audiocall h4 {
-  margin-bottom: 20px;
-  font-weight: normal;
+  margin-bottom: 10px;
+  font-weight: bold;
   font-size: 32px;
   font-family: "Forum";
+  text-align: center;
+  color: var(--font-color-dark);
 }
 .statistic-games {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+}
+
+.statistic-games__diagram {
+  position: relative;
+  display: flex;
+  justify-content: center;
+}
+
+.statistic-games__diagram span{
+  position: absolute;
+  top: 35%;
+  font-size: 28px;
+  font-weight: bold;
+  color: var(--font-color-dark);
 }
 
 .count-game-all,
