--- a/src/components/pages/audiocall/index.css
+++ b/src/components/pages/audiocall/index.css
@@ -25,6 +25,11 @@
   justify-content: space-between;
   width: 80vw;
   margin: 0 auto;
+  transition: 0.4s;
+}
+
+.audiocall-btn-block path{
+  transition: 0.4s;
 }
 
 .audiocall-fullscreen svg,
@@ -94,7 +99,7 @@
 .audiocall-answer {
   display: flex;
   justify-content: space-around;
-  width: 10vw;
+  width: 13vw;
   height: 45px;
   background-color: rgba(42, 57, 80, 1);
   color: #fff;
