feat: add set wrong/correct answerWord

--- a/src/components/pages/vocabulary/index.css
+++ b/src/components/pages/vocabulary/index.css
@@ -130,6 +130,12 @@
   margin-top: 10px;
   margin-bottom: 10px;
 }
+.correct-answer,
+.wrong-answer {
+  text-align: center;
+  margin: 5px;
+}
+
 .card__card__meaning-translate,
 .card__example,
 .card__example-translate {
