fix: correct fullscreen

--- a/src/components/pages/audiocall/index.css
+++ b/src/components/pages/audiocall/index.css
@@ -20,6 +20,12 @@
   background-color: #dffcf5;
 }
 
+.audiocall-controls {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
 .audiocall-btn-block {
   display: flex;
   justify-content: space-between;
