fix: correct errors in console

--- a/src/components/pages/audiocall/index.css
+++ b/src/components/pages/audiocall/index.css
@@ -145,6 +145,10 @@
   cursor: pointer;
 }
 
+.audiocall-disabled {
+  pointer-events: none;
+}
+
 @media (max-width: 1440px) {
   .audiocall-btn-block {
     margin: -100px auto 0 auto;
