--- a/src/components/pages/audiocall/index.css
+++ b/src/components/pages/audiocall/index.css
@@ -2,7 +2,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100vw;
   min-height: calc(100vh - 130px);
   background: url(./../../../assets/img/bg-audiocall.jpg) no-repeat;
   background-size: cover;
@@ -13,10 +12,11 @@
   flex-direction: column;
   gap: 50px;
   height: 500px;
+  max-width: 1200px;
   width: 80%;
   margin: 0 auto;
   padding: 15px;
-  border: 8px dashed rgba(42, 57, 80, 1);
+  border: 8px dashed var(--bg-dark);
   background-color: #dffcf5;
 }
 
@@ -29,8 +29,6 @@
 .audiocall-btn-block {
   display: flex;
   justify-content: space-between;
-  width: 80vw;
-  margin: 0 auto;
   transition: 0.4s;
 }
 
@@ -46,7 +44,7 @@
 .audiocall-fullscreen svg:hover,
 .audiocall-close svg:hover {
   cursor: pointer;
-  fill: var( --bg-btn);
+  fill: var(--bg-btn);
 }
 
 .wrapper-audiocall button {
@@ -60,14 +58,14 @@
   margin: -50px auto 50px auto;
   width: 140px;
   height: 140px;
-  background: rgba(42, 57, 80, 1);
+  background: var(--bg-dark);
   border-radius: 50%;
 }
 
 .audiocall-sound-img img {
   width: 100px;
   height: 100px;
-  color: #fff;
+  color: var(--font-color-light);
 }
 
 .audiocall-sound:hover,
@@ -81,7 +79,7 @@
   width: 140px;
   height: 140px;
   border-radius: 50%;
-  border: 1px solid rgba(42, 57, 80, 1);
+  border: 1px solid var(--font-color-dark);
 }
 
 .right-answer-word {
@@ -90,13 +88,14 @@
   font-size: 1.5rem;
   text-transform: uppercase;
   font-weight: bold;
-  color: rgba(42, 57, 80, 1);
+  color: var(--font-color-dark);
 }
 
 .audiocall-answers {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .audiocall-next-button {
@@ -107,7 +106,7 @@
   font-size: 1.5rem;
   font-family: Forum;
   font-weight: bold;
-  color: #fff;
+  color: var(--font-color-light);
   background-color: tomato;
   border-radius: 4px;
   cursor: pointer;
@@ -119,19 +118,22 @@
   color: #90c47a;
 }
 
+.number-answer {
+  padding-right: 10px;
+}
+
 .audiocall-answer {
   display: flex;
-  justify-content: space-around;
-  gap: 15px;
-  width: 13vw;
+  align-items: center;
+  flex-grow: 1;
   height: 45px;
-  background-color: rgba(42, 57, 80, 1);
-  color: #fff;
+  background-color: var(--bg-dark);
+  color: var(--font-color-light);
   font-family: Forum;
   font-size: 1.3rem;
   font-weight: 400;
   padding: 10px;
-  align-items: center;
+  margin: 0 6px 10px;
   transition: all 0.6s;
 }
 
@@ -141,7 +143,7 @@
 
 .audiocall-answer:hover {
   background-color: var(--bg-btn);
-  color: #000000;
+  color: var(--font-color-dark);
   cursor: pointer;
 }
 
@@ -149,40 +151,32 @@
   pointer-events: none;
 }
 
-@media (max-width: 1440px) {
-  .audiocall-btn-block {
-    margin: -100px auto 0 auto;
-  }
-
+@media (max-width: 950px) {
   .audiocall {
-    padding-top: 120px;
-    height: 300px;
-    gap: 30px;
-  }
-}
-
-@media (max-width: 768px) {
-  .audiocall-btn-block {
-    margin: -140px auto 0 auto;
-  }
-
-  .audiocall {
-    padding-top: 150px;
-    height: 650px;
+    margin: 50px auto;
+    height: auto;
   }
 
   .audiocall-answers {
-    display: flex;
     flex-direction: column;
-    gap: 20px;
     margin: 0 auto;
+  }
+
+  .audiocall-answer {
+    padding: 8px 50px;
   }
 
   .audiocall-next-button {
     margin-bottom: 20px;
   }
+}
+
+@media (max-width: 500px) {
+  .audiocall-answers {
+    width: 100%;
+  }
 
   .audiocall-answer {
-    padding: 15px 80px;
+    padding: 8px 15px;
   }
 }
