--- a/src/components/pages/vocabulary/index.css
+++ b/src/components/pages/vocabulary/index.css
@@ -232,13 +232,21 @@
   background-repeat: no-repeat;
 }
 .text-errors {
-  height: 90vh;
-  color: black;
-  font-size: 40px;
+  box-sizing: border-box;
+  height: calc(100vh - 290px);
+  width: 50%;
+  padding-top: 50px;
+  margin: 0 auto;
+  color: var(--font-color-dark);
+  font-size: 32px;
   justify-content: center;
-  padding-top: 60px;
 }
+
 @media screen and (max-width: 768px) {
+  .text-errors {
+    height: calc(100vh - 270px);
+    width: 60%;
+  }
   .book-page-nav-logo {
     width: 60px;
     height: 60px;
@@ -273,21 +281,33 @@
   }
 }
 @media screen and (max-width: 680px) {
+  .text-errors {
+    height: calc(100vh - 410px);
+    width: 100%;
+    padding: 50px 20px 0;
+    font-size: 26px;
+    text-align: center;
+  }
   .navigation {
     flex-direction: column;
+    align-items: center;
     padding: 0 0 10px 0;
   }
-  .book-page-nav-sprint,
-  .book-page-nav-audio,
-  .nav-right {
-    margin: 0 auto;
+  .book-page-nav-audio {
+    margin: 15px 0;
   }
   .book-page-nav-audio span,
   .book-page-nav-sprint span {
     display: none;
   }
+  .select-partition {
+    margin: 0;
+  }
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 639px) {
+  .text-errors {
+    height: calc(100vh - 538px);
+  }
   .book-word-item {
     width: 350px;
   }
@@ -295,7 +315,10 @@
     width: 320px;
   }
 }
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 440px) {
+  .text-errors {
+    height: calc(100vh - 605px);
+  }
   .book-word-item {
     width: 300px;
   }
