--- a/src/components/pages/statistic/index.css
+++ b/src/components/pages/statistic/index.css
@@ -159,6 +159,7 @@
   .statistic-sprint,
   .statistic-audiocall {
     width: 90%;
+    margin: 0 auto;
   }
   .statistic-audiocall {
     margin-top: 40px;
@@ -207,4 +208,5 @@
 canvas {
   width: 80% !important;
   margin: 0 auto !important;
+  margin-top: 30px !important;
 }
