--- a/src/components/pages/vocabulary/index.css
+++ b/src/components/pages/vocabulary/index.css
@@ -259,6 +259,7 @@
   color: var(--font-color-dark);
   font-size: 32px;
   justify-content: center;
+  text-align: center;
 }
 
 @media screen and (max-width: 768px) {
