--- a/src/components/pages/about-us/index.css
+++ b/src/components/pages/about-us/index.css
@@ -10,10 +10,10 @@
 
 .about-advantages {
   width: 20%;
-  height: 400px;
-  margin: 30px;
+  min-height: 400px;
+  margin: 30px 20px;
   background-color: #fff;
-  color: #000;
+  color: var(--font-color-dark);
   border-radius: 10px;
 }
 
@@ -40,20 +40,19 @@
 
 .about-header-advantages,
 .avatar-name {
+  font-family: Forum;
   margin: 20px auto 10px;
   text-align: center;
-  font-family: Forum;
   text-transform: uppercase;
-  color: #2a3950;
+  color: var(--font-color-dark);
   letter-spacing: 5px;
 }
 
 .about-description-advantages,
 .avatar-description {
-  padding: 20px;
-  text-align: justify;
-  font-size: 1.2rem;
   font-family: Roboto;
+  font-size: 1.2rem;
+  padding: 5px 15px 15px;
 }
 
 .avatar-description {
@@ -67,7 +66,7 @@
   font-family: Forum;
   font-size: 2rem;
   text-transform: uppercase;
-  color: #2a3950;
+  color: var(--font-color-dark);
 }
 
 .wrapper-avatar {
@@ -142,7 +141,7 @@
 
   .about-advantages {
     width: 35%;
-    height: 350px;
+    min-height: 350px;
   }
 
   .about-img-advantages {
@@ -155,16 +154,9 @@
 }
 
 @media (max-width: 768px) {
-  .advantages {
-    /* flex-direction: column;
-    justify-content: center;
-    align-items: center; */
-  }
-
   .about-advantages {
     width: 40%;
     margin: 20px 10px;
-    /* height: 400px; */
   }
 
   .about-img-advantages {
@@ -175,11 +167,6 @@
 
   .about-header-advantages {
     font-size: 20px;
-  }
-
-  .about-description-advantages {
-    /* padding-top: 0; */
-    /* font-size: 1.5em; */
   }
 
   .avatar-item {
@@ -195,12 +182,11 @@
 
 @media (max-width: 640px) {
   .about-advantages {
-    height: 300px;
+    min-height: 300px;
   }
 
   .about-header-advantages {
     margin: 5px auto;
-    font-size: 1rem;
   }
 
   .about-description-advantages,
@@ -223,7 +209,7 @@
 
   .about-advantages {
     width: calc(100% - 20px);
-    height: 250px;
+    min-height: 250px;
   }
 
   .about-img-advantages {
