--- a/src/components/pages/vocabulary/index.css
+++ b/src/components/pages/vocabulary/index.css
@@ -182,9 +182,13 @@
   margin: auto;
   font-size: 20px;
   font-family: Forum;
+  font-weight: 800;
   width: 160px;
   text-align: center;
   color: var(--font-color-light);
+}
+.book-page-number-page.selection {
+  color: black;
 }
 .select-partition {
   width: 125px;
