fix: implement correct words order

--- a/src/components/pages/audiocall/index.css
+++ b/src/components/pages/audiocall/index.css
@@ -97,6 +97,7 @@
   flex-direction: row;
   justify-content: space-between;
   flex-wrap: wrap;
+  background-color: #dffcf5;
 }
 
 .audiocall-next-button {
